Fixed Overview spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -131,6 +131,8 @@ nav>ul>li>svg {
     font-size: 24px;
     line-height: 100%;
     letter-spacing: 0.3px;
+    /* This is to center the "Overview" text */
+    margin: 0;
  
 }
 #overview img{
